# StudySync

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
client/: CMakeLists.txt  resources.qrc
client/include/: ClientNetworkManager.h  MainWindow.h  TcpClient.h
client/include/ui/: MainWindow.h
client/include/ui/page/: AiTutorPage.h  DashboardPage.h  FocusPage.h  GroupChatPage.h  GroupsPage.h  TasksPage.h
client/include/ui/widget/: CreateTaskDialog.h  GroupCard.h  TaskCard.h
client/resources/: themeStyle.css
client/resources/lang/: ar_sa.json  en_us.json  fr_fr.json
client/src/: ClientNetworkManager.cpp  MainWindow.cpp  TcpClient.cpp  main.cpp
client/src/ui/: ClientState.cpp  MainWindow.cpp
client/src/ui/page/: AiTutorPage.cpp  DashboardPage.cpp  FocusPage.cpp  GroupChatPage.cpp  GroupsPage.cpp  TasksPage.cpp
client/src/ui/widget/: CreateTaskDialog.cpp  GroupCard.cpp  LoginWindow.cpp  ManageMembersDialog.cpp  NotificationsDialog.cpp
server/: CMakeLists.txt
server/include/: ConnectionManager.h  Database.h  TcpServer.h
server/src/: ConnectionManager.cpp  Database.cpp  ServerRoutes.cpp  TcpServer.cpp  main.cpp
shared/: CMakeLists.txt
src/: main.cpp
